# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-05-22 Michael Truog   <mjtruog at protonmail dot com>

    * Fix bug with CloudI Service API function services_update that
      prevented the command-line argument from being updated for its
      use when calling the aspects_init_after functions
      (i.e., after the update causes a new OS process to start)
    * Fix bug with CloudI Service API function services_search when
      a scope is provided that doesn't exist

2018-05-21 Michael Truog   <mjtruog at protonmail dot com>

    * Change the CloudI Service API function services_status by
      splitting the availability values into running values
      (representing uptime_running) and updated values
      (uptime_running minus any elapsed time during updates)
    * Fix timeout_terminate limit_min/limit_max presence in
      the view of a service's configuration

2018-05-18 Michael Truog   <mjtruog at protonmail dot com>

    * Fix restart_count_total bug with recent uptime additions

2018-05-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add 33.3% availability level to the CloudI Service API
      function services_status

2018-05-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add availability information to the CloudI Service API
      function services_status based on the uptime_running value
    * Fix the cloudi_core_i_configurator module to use infinity timeouts
      when modifying the CloudI configuration, so it isn't possible to
      have a timeout exception in the middle of adding or removing
      services (i.e., a timeout exception that causes a state
      inconsistency, it is still possible for the cloudi_core_i_configurator
      function call to timeout)

2018-05-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add the CloudI Service API function services_status to provide the
      runtime status of any services at a single point in time